# Ollama-MCP-Streamlit-Chatbot

./: .gitignore  README.md  config.json  main.py  mcpclient_manager.py  model_setting.py  ollama_agent.py  ollama_toolmanager.py  pyproject.toml  requirements.txt  streamlit_manager.py  streamlit_ollama_mcp.py
MCP_Client_Gemini/: MCP_Client.pyproj  MCP_Client.sln  MCP_Client_async.py  chat_setup.py  config.json  requirements.txt
MCP_Client_Gemini/FileSystemMCPServer test/: test_csv_operations.py  test_filesystem_stdio.py
tests/: test_excel_mcp.py  test_main.py  test_ollama_toolmanager.py  test_path.py
